# horizon-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  devshell.nix  example-horizon.json  flake.nix  formatter.nix  manifest  skills.md
.beads/: config.yaml  metadata.json
cli/: Cargo.toml
cli/src/: main.rs
docs/: BUILD_CORES.md  DESIGN.md
lib/: Cargo.toml
lib/src/: address.rs  capability.rs  cluster.rs  criosphere.rs  data.rs  disk.rs  domain.rs  error.rs  horizon.rs  horizon_proposal.rs  io.rs  lib.rs  machine.rs  magnitude.rs  name.rs  node.rs  placement.rs  proposal.rs  pub_key.rs  request.rs  secret.rs  species.rs  user.rs  view.rs
lib/src/proposal/: ai.rs  cluster.rs  domain.rs  io.rs  machine.rs  network.rs  node.rs  placement.rs  pub_keys.rs  router.rs  secret.rs  services.rs  user.rs  vpn.rs  wireguard.rs
lib/src/view/: cluster.rs  horizon.rs  io.rs  machine.rs  network.rs  node.rs  projected_node.rs  router.rs  user.rs
lib/tests/: address.rs  ai.rs  cluster.rs  error.rs  horizon.rs  io.rs  machine.rs  magnitude.rs  name.rs  network.rs  node.rs  placement.rs  projection.rs  projection_purity.rs  proposal.rs  pub_key.rs  secret.rs  species.rs  system_json_roundtrip.rs  tailnet.rs  user.rs  view_json_roundtrip.rs  vpn.rs
lib/tests/fixtures/: maisiliym.nota  maisiliym.toml
