[workspace]
resolver = "3"
members = ["lib", "cli"]

[workspace.dependencies]
horizon-lib = { path = "lib" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
nota-codec = { git = "https://github.com/LiGoldragon/nota-codec.git" }
thiserror  = "2"
clap       = { version = "4", features = ["derive"] }
ipnet      = { version = "2", features = ["serde"] }
